# scoliosis

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  run.sh  tox.ini
.dvc/: config
.github/workflows/: ci.yml
ai/: CLAUDE.md
ai/evaluation/: CLAUDE.md  cobb.py  evaluator.py
ai/inference/: predictor.py
ai/models/architectures/: __init__.py  base_model.py  encoder_unet.py
ai/preprocessing/: CLAUDE.md  keypoints.py  pipeline.py  segmentation.py
ai/training/: augmentation.py  dataset.py  losses.py  trainer.py
ai/utils/: __init__.py  device.py
ai/visualization/: __init__.py  case_summary.py
data/: raw.dvc
data/raw/: MaIA_Scoliosis_Dataset.zip.dvc
deploy/: ec2_setup.sh  scoliosis-server.service
docs/diagrams/: v3_overview.py
mlflow/: mlflow_server.sh
notebooks/: README.md
notebooks/experiments/audit/: audit_findings.ipynb
notebooks/sandbox/: data_exploration.ipynb  data_exploration_v2.ipynb  data_exploration_v2_corrected.ipynb  known_issues_triage.ipynb  model_primer.ipynb  model_primer_v2.ipynb  model_primer_v3.ipynb  model_primer_v3_corrected.ipynb  spinenet_architecture.ipynb
scripts/: build_case_summaries.py  build_corrected_dataset.py  evaluate.py  preprocess.py  train.py
server/: main.py
server/api/: predict.py
server/schemas/: prediction.py
server/services/: prediction_service.py
tests/: test_architectural_fitness.py  test_case_summary.py  test_cobb_evaluation.py  test_visualization_architecture.py
