[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scoliosis-ai"
dynamic = ["version"]
description = "Scoliosis detection AI package"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "Pillow",
    "pyyaml",
    "scipy",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
include = ["ai*"]

[tool.setuptools.package-data]
"ai" = ["py.typed"]
